--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 .home{
     /* height: 82vh; */
-    background-color: #DCDCDC;
+    /* background-color: #DCDCDC; */
     border-radius: 10px;
 }
 
