--- a/src/pages/Casestudy/Casestudy.css
+++ b/src/pages/Casestudy/Casestudy.css
@@ -7,5 +7,11 @@
     background-color: black;
     color: white;
     border-radius: 10px;
-    padding: 20px;
+    
+}
+
+.box1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
